# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@helly25_bashtest//bashtest:bashtest.bzl", "bashtest")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load(":golden.bzl", "xff_golden_cases")

cc_binary(
    name = "xff",
    srcs = ["main.cc"],
    visibility = ["//visibility:public"],
    deps = [
        ":help_cc",
        ":manpage_cc",
        ":markdown_cc",
        "//xff/config:config_cc",
        "//xff/config:loader_cc",
        "//xff/config:policy_cc",
        "//xff/datetime:datetime_cc",
        "//xff/engine:evaluate_cc",
        "//xff/engine:run_cc",
        "//xff/format:format_cc",
        "//xff/parser:parser_cc",
        "//xff/registry:registry_cc",
        "//xff/vfs:local_fs_cc",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

# Registry-backed `xff --man`: a roff man page generated from Globals() + All(), so
# it cannot drift from the binary. Reuses help_cc's ArgHint for the synopsis.
cc_library(
    name = "manpage_cc",
    srcs = ["manpage.cc"],
    hdrs = ["manpage.h"],
    deps = [
        ":globals_cc",
        ":help_cc",
        "//xff/registry:registry_cc",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_test(
    name = "manpage_test",
    size = "small",
    srcs = ["manpage_test.cc"],
    deps = [
        ":globals_cc",
        ":manpage_cc",
        "//xff/registry:registry_cc",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

# Registry-backed `xff --markdown`: a GitHub-renderable reference from Globals() +
# All(), the markdown counterpart of the man page. Reuses help_cc's ArgHint.
cc_library(
    name = "markdown_cc",
    srcs = ["markdown.cc"],
    hdrs = ["markdown.h"],
    deps = [
        ":globals_cc",
        ":help_cc",
        "//xff/registry:registry_cc",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_test(
    name = "markdown_test",
    size = "small",
    srcs = ["markdown_test.cc"],
    deps = [
        ":globals_cc",
        ":markdown_cc",
        "//xff/registry:registry_cc",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

# The whole-run option vocabulary (the flag counterpart of the registry), enumerated
# for the help system and the planned man-page / .md generators.
cc_library(
    name = "globals_cc",
    srcs = ["globals.cc"],
    hdrs = ["globals.h"],
    deps = ["@abseil-cpp//absl/types:span"],
)

cc_test(
    name = "globals_test",
    size = "small",
    srcs = ["globals_test.cc"],
    deps = [
        ":globals_cc",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

# Registry-backed `--help=TOPIC` rendering: the index and per-entry help are derived
# from registry::All() (primaries) and Globals() (flags), so they never drift from
# the parser vocabulary or the option set.
cc_library(
    name = "help_cc",
    srcs = ["help.cc"],
    hdrs = ["help.h"],
    deps = [
        ":globals_cc",
        "//xff/fields:fields_cc",
        "//xff/registry:registry_cc",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_test(
    name = "help_render_test",
    size = "small",
    srcs = ["help_render_test.cc"],
    deps = [
        ":globals_cc",
        ":help_cc",
        "//xff/registry:registry_cc",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@helly25_mbo//mbo/testing:status_cc",
    ],
)

# Binary-level test of `xff --explain`: exercises cli/main.cc's real config
# wiring (XFF_CONFIG discovery -> resolve -> effective-config dump) end to end,
# via helly25/bashtest (expect_* helpers).
bashtest(
    name = "explain_test",
    size = "small",
    srcs = ["explain_test.sh"],
    data = [":xff"],
)

# Binary-level test of the strict find style: cli/main.cc's ActiveStyle +
# EnforceStyle wiring rejects xff extensions under --config=find and accepts the
# full vocabulary under the default xff style.
bashtest(
    name = "style_test",
    size = "small",
    srcs = ["style_test.sh"],
    data = [":xff"],
)

# End-to-end test of the content-search predicates (-content / -icontent / -rxc /
# -irxc): they read files on disk, so the real binary is the right level. Covers
# literal vs regex, the case-folding variants, the binary-file skip, and the
# find-style gating of these xff extensions.
bashtest(
    name = "content_test",
    size = "small",
    srcs = ["content_test.sh"],
    data = [":xff"],
)

# End-to-end test of -cmp: byte-exact content comparison (TRUE = identical); `! -cmp`
# with a {def.B}/{relpath} target lists files that differ from a parallel tree; the
# find style rejects it. Drives the real binary (reads files).
bashtest(
    name = "cmp_test",
    size = "small",
    srcs = ["cmp_test.sh"],
    data = [":xff"],
)

# End-to-end test of --color=auto|always|never: only --color=always forces the
# ANSI escapes when stdout is a pipe (the test captures it); a plain file stays
# uncolored; --help documents the flag. Drives the real binary (reads isatty).
bashtest(
    name = "color_test",
    size = "small",
    srcs = ["color_test.sh"],
    data = [":xff"],
)

# End-to-end test of the -grep action: prints path:line:text per matching content
# line (regex), skips binaries, composes with find predicates, find style rejects it.
bashtest(
    name = "grep_test",
    size = "small",
    srcs = ["grep_test.sh"],
    data = [":xff"],
)

# End-to-end test of the --exclude / --include run-level filter (ignore family):
# a gitignore-style glob drops matching files, a matched directory is pruned, and
# --include re-includes with last-match-wins. Drives the real binary.
bashtest(
    name = "ignore_test",
    size = "small",
    srcs = ["ignore_test.sh"],
    data = [":xff"],
)

# End-to-end test of per-directory ignore files (--ignore-files): .ignore /
# .xffignore are opt-in, stack per directory (deeper overrides shallower), prune
# directories, and are disabled by -u / --no-ignore.
bashtest(
    name = "ignore_files_test",
    size = "small",
    srcs = ["ignore_files_test.sh"],
    data = [":xff"],
)

# End-to-end test of -g / --gitignore: per-directory .gitignore is opt-in (off by
# default), recursive, scoped to its subtree, and disabled by -u.
bashtest(
    name = "ignore_gitignore_test",
    size = "small",
    srcs = ["ignore_gitignore_test.sh"],
    data = [":xff"],
)

# End-to-end test of --summary output: right-aligned human table (grouped digits)
# by default, stable one-object-per-row --format=jsonl machine output.
bashtest(
    name = "summary_test",
    size = "small",
    srcs = ["summary_test.sh"],
    data = [":xff"],
)

# End-to-end test of --format=csv / --format=tsv: the header row is emitted by default
# (--no-header suppresses it) and a comma in a filename is RFC-4180 quoted. The header is
# a driver concern (emitted once before the walk), so this drives the real binary.
bashtest(
    name = "csv_test",
    size = "small",
    srcs = ["csv_test.sh"],
    data = [":xff"],
)

# End-to-end test of -diff (mbo::diff backend): a unified diff by default, the -diff=STYLE
# output formats, TRUE = same polarity, a binary side noted on stderr, and the usage errors.
bashtest(
    name = "diff_test",
    size = "small",
    srcs = ["diff_test.sh"],
    data = [":xff"],
)

# End-to-end test of -hash (xff/hash -> mbo::digest): the `<digest>  <path>` sha256sum layout,
# -hash=ALGO[/ENCODING], the --hash-algorithm / --hash-encoding defaults for the action and the
# {hash} field, the usage errors, and the find-style rejection.
bashtest(
    name = "hash_test",
    size = "small",
    srcs = ["hash_test.sh"],
    data = [":xff"],
)

# Golden output of -diff per mode: xff walks tree `a` and diffs each file against `b/{relpath}`,
# one committed golden each (golden.bzl). -diff emits a git-style (no-timestamp) header, so the
# whole per-mode output is a verbatim golden with no normalization, checked with mbo's diff_test.
xff_golden_cases(
    name = "diff_golden",
    cases = {
        "u": ("a -type f -diff=u 'b/{relpath}'", "testdata/diff/golden/u.txt"),
        "c": ("a -type f -diff=c 'b/{relpath}'", "testdata/diff/golden/c.txt"),
        "n": ("a -type f -diff=n 'b/{relpath}'", "testdata/diff/golden/n.txt"),
        "y": ("a -type f -diff=y 'b/{relpath}'", "testdata/diff/golden/y.txt"),
        "none": ("a -type f -diff=none 'b/{relpath}'", "testdata/diff/golden/none.txt"),
    },
    setup = "testdata/diff/setup.sh",
)

# Broad golden coverage of the walk / matching / -printf / traversal-control surface over one
# fixture (golden.bzl): each case is a whole xff command line diffed against a committed golden.
# The fixture's output is stable (relative paths, basenames, type chars, depths -- no mtime / size /
# inode), so no normalization is needed. Add a case + a golden to cover another command.
xff_golden_cases(
    name = "walk_golden",
    cases = {
        "type_f": ("root -type f", "testdata/walk/golden/type_f.txt"),
        "name_cc": ("root -type f -name '*.cc'", "testdata/walk/golden/name_cc.txt"),
        "regex_header": ("root -regex '.*[.]h'", "testdata/walk/golden/regex_header.txt"),
        "path_src": ("root -type f -path '*/src/*'", "testdata/walk/golden/path_src.txt"),
        "printf_type": ("root -printf '%y %p\\n'", "testdata/walk/golden/printf_type.txt"),
        "printf_name": ("root -type f -printf '%f\\n'", "testdata/walk/golden/printf_name.txt"),
        "maxdepth1": ("root -maxdepth 1", "testdata/walk/golden/maxdepth1.txt"),
        "prune_src": ("root -name src -prune -o -print", "testdata/walk/golden/prune_src.txt"),
    },
    setup = "testdata/walk/setup.sh",
)

# End-to-end test of the {lines} per-file line-count field via the %{lines} -printf escape:
# text-file counts, no-trailing-newline, empty (0), binary (empty), and non-regular (empty).
bashtest(
    name = "lines_test",
    size = "small",
    srcs = ["lines_test.sh"],
    data = [":xff"],
)

# End-to-end test of -ls column alignment (via the ColumnBuffer) and the --buffer
# modes (auto/off/all/N).
bashtest(
    name = "ls_test",
    size = "small",
    srcs = ["ls_test.sh"],
    data = [":xff"],
)

# End-to-end test of --exact / FS-native name matching: --exact forces byte-exact,
# the find style stays byte-exact, and the xff default follows the test volume's
# own case rule (probed at runtime, so it holds on case-sensitive and folding FS).
bashtest(
    name = "exact_test",
    size = "small",
    srcs = ["exact_test.sh"],
    data = [":xff"],
)

# Binary-level test of -exec, which spawns real children: the `+` batch form runs
# the command once with all matches, `\;` once per match. Shell level is the right
# fit for a subprocess-spawning feature.
bashtest(
    name = "exec_test",
    size = "small",
    srcs = ["exec_test.sh"],
    data = [":xff"],
)

# Binary-level test of the exit-code model: default find semantics (0/2, match
# status never affects exit) vs --quiet / --exit-match making "1 = no match"
# reachable, with errors (exit 2) outranking match status. Exit codes are a
# process-level concern, so this drives the real binary.
bashtest(
    name = "exit_test",
    size = "small",
    srcs = ["exit_test.sh"],
    data = [":xff"],
)

# Binary-level test that --help / -h print a real usage page (not a stub) and exit
# 0, and that --version prints and exits 0. Help text is a process-level concern.
bashtest(
    name = "help_test",
    size = "small",
    srcs = ["help_test.sh"],
    data = [":xff"],
)

# Binary-level test of the `xff help [topic]` subcommand: dispatch, exit codes, and
# the find-mode suppression (real-process concerns the help unit test cannot cover).
bashtest(
    name = "help_topic_test",
    size = "small",
    srcs = ["help_topic_test.sh"],
    data = [":xff"],
)

# End-to-end test that `xff --man` emits roff that renders through a real formatter
# (mandoc / groff / nroff) into a proper man page. The formatter is a required test
# dependency (mandoc on macOS, installed in CI on Linux); a missing one fails the
# test. Proves the generated roff is valid, not just well-formed text.
bashtest(
    name = "man_test",
    size = "small",
    srcs = ["man_test.sh"],
    data = [":xff"],
)
