# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

# The .xffrc grammar parser (bazel-rc-style flag bundles with base:config:
# selectors). Parse-only; the config loader and policy gate build on it.
cc_library(
    name = "xffrc_cc",
    srcs = ["xffrc.cc"],
    hdrs = ["xffrc.h"],
    visibility = ["//xff:__subpackages__"],
    deps = [
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "xffrc_test",
    size = "small",
    srcs = ["xffrc_test.cc"],
    deps = [
        ":xffrc_cc",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

# The system policy parser (/etc/xff.ini): [defaults] flag lines + [policy]
# per-layer allow/deny rules. Parse-only; the policy gate (phase C) enforces.
cc_library(
    name = "ini_cc",
    srcs = ["ini.cc"],
    hdrs = ["ini.h"],
    visibility = ["//xff:__subpackages__"],
    deps = [
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "ini_test",
    size = "small",
    srcs = ["ini_test.cc"],
    deps = [
        ":ini_cc",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

# The loader core: resolves the parsed layers (system [defaults] + user/project
# .xffrc) under the active --config selectors into a precedence-ordered, prov-
# enance-tagged flag list. No discovery (phase B-next) or gating (phase C) yet.
cc_library(
    name = "config_cc",
    srcs = ["config.cc"],
    hdrs = ["config.h"],
    visibility = ["//xff:__subpackages__"],
    deps = [
        ":ini_cc",
        ":xffrc_cc",
    ],
)

cc_test(
    name = "config_test",
    size = "small",
    srcs = ["config_test.cc"],
    deps = [
        ":config_cc",
        ":xffrc_cc",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
