# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_test")

# Conformance gate: asserts xff's OWN defined output over a fixed fixture tree
# (not differential against a system `find`, which varies by platform). See the
# header comment in conformance_test.cc.
cc_test(
    name = "conformance_test",
    size = "small",
    srcs = ["conformance_test.cc"],
    deps = [
        "//xff/engine:run_cc",
        "//xff/parser:parser_cc",
        "//xff/vfs:local_fs_cc",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@helly25_mbo//mbo/testing:status_cc",
    ],
)
