# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

# Content line matching: split a file's bytes into grep-style lines and select the
# matching ones (1-based number + text). Backs the `-grep` action's line output.
cc_library(
    name = "line_match_cc",
    srcs = ["line_match.cc"],
    hdrs = ["line_match.h"],
    visibility = ["//xff:__subpackages__"],
    deps = [
        "@abseil-cpp//absl/functional:function_ref",
    ],
)

cc_test(
    name = "line_match_test",
    size = "small",
    srcs = ["line_match_test.cc"],
    deps = [
        ":line_match_cc",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
