# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

# Parses human time strings (epoch / ISO-8601 / relative "N units ago") into an
# absolute instant. Backs find's -newerXt; reusable for any time argument.
cc_library(
    name = "datetime_cc",
    srcs = ["datetime.cc"],
    hdrs = ["datetime.h"],
    visibility = ["//xff:__subpackages__"],
    deps = [
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
    ],
)

cc_test(
    name = "datetime_test",
    size = "small",
    srcs = ["datetime_test.cc"],
    deps = [
        ":datetime_cc",
        "@abseil-cpp//absl/time",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
