# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

# Sequential pre-order traversal over a vfs::FileSystem.
cc_library(
    name = "walk_cc",
    srcs = ["walk.cc"],
    hdrs = ["walk.h"],
    visibility = ["//xff:__subpackages__"],
    deps = [
        "//xff/vfs:vfs_cc",
        "@abseil-cpp//absl/functional:function_ref",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/types:span",
    ],
)

cc_test(
    name = "walk_test",
    size = "small",
    srcs = ["walk_test.cc"],
    deps = [
        ":walk_cc",
        "//xff/vfs:local_fs_cc",
        "//xff/vfs:vfs_cc",
        "@abseil-cpp//absl/functional:function_ref",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@com_helly25_mbo//mbo/testing:status_cc",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

# Evaluates a parsed find expression (tests + operators + -print/-print0
# actions) against a visited entry.
cc_library(
    name = "evaluate_cc",
    srcs = ["evaluate.cc"],
    hdrs = ["evaluate.h"],
    visibility = ["//xff:__subpackages__"],
    deps = [
        ":walk_cc",
        "//xff/exec:exec_cc",
        "//xff/parser:parser_cc",
        "//xff/regex:regex_cc",
        "//xff/registry:registry_cc",
        "//xff/vfs:vfs_cc",
        "@abseil-cpp//absl/functional:function_ref",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
    ],
)

cc_test(
    name = "evaluate_test",
    size = "small",
    srcs = ["evaluate_test.cc"],
    deps = [
        ":evaluate_cc",
        ":walk_cc",
        "//xff/parser:parser_cc",
        "//xff/vfs:local_fs_cc",
        "//xff/vfs:vfs_cc",
        "@abseil-cpp//absl/time",
        "@com_helly25_mbo//mbo/testing:status_cc",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

# Drives one find run: walk the roots, evaluate the expression, (implicit) print.
cc_library(
    name = "run_cc",
    srcs = ["run.cc"],
    hdrs = ["run.h"],
    visibility = ["//xff:__subpackages__"],
    deps = [
        ":evaluate_cc",
        ":walk_cc",
        "//xff/parser:parser_cc",
        "//xff/registry:registry_cc",
        "//xff/render:render_cc",
        "//xff/vfs:vfs_cc",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
    ],
)

cc_test(
    name = "run_test",
    size = "small",
    srcs = ["run_test.cc"],
    deps = [
        ":run_cc",
        "//xff/parser:parser_cc",
        "//xff/vfs:local_fs_cc",
        "@abseil-cpp//absl/status",
        "@com_helly25_mbo//mbo/testing:status_cc",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
