# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

# File / data digests over mbo::digest, behind a name-keyed algorithm table shared by the
# `{hash}` field and the `-hash` action. Hex or base64 output.
cc_library(
    name = "hash_cc",
    srcs = ["hash.cc"],
    hdrs = ["hash.h"],
    visibility = ["//xff:__subpackages__"],
    deps = [
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/types:span",
        "@helly25_mbo//mbo/container:limited_map_cc",
        "@helly25_mbo//mbo/digest:digest_cc",
        "@helly25_mbo//mbo/file:artefact_cc",
    ],
)

cc_test(
    name = "hash_test",
    size = "small",
    srcs = ["hash_test.cc"],
    deps = [
        ":hash_cc",
        "@abseil-cpp//absl/types:span",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
