# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

# gitignore-syntax pattern matching (the .gitignore / .ignore / .xffignore stack
# and the --exclude / --include globs), by translating each glob to an RE2 regex.
cc_library(
    name = "ignore_cc",
    srcs = ["ignore.cc"],
    hdrs = ["ignore.h"],
    visibility = ["//xff:__subpackages__"],
    deps = [
        "//xff/glob:glob_cc",
        "//xff/regex:regex_cc",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "ignore_test",
    size = "small",
    srcs = ["ignore_test.cc"],
    deps = [
        ":ignore_cc",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
