# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

# Filename / extension -> programming language via a curated static table (no github-linguist
# dependency), for the -lang GLOB predicate and the {lang} field.
cc_library(
    name = "language_cc",
    srcs = ["language.cc"],
    hdrs = ["language.h"],
    visibility = ["//xff:__subpackages__"],
    deps = [
        "@abseil-cpp//absl/strings",
        "@helly25_mbo//mbo/container:limited_map_cc",
    ],
)

cc_test(
    name = "language_test",
    size = "small",
    srcs = ["language_test.cc"],
    deps = [
        ":language_cc",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
