# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

# Visible to //extra_modules too: a build extra (e.g. extra_modules/pcre2) self-registers its notice
# here via license::Registrar, the same way core deps do.
package(default_visibility = [
    "//extra_modules:__subpackages__",
    "//xff:__subpackages__",
])

# xff's own license (Apache-2.0) is compiled into the binary from the canonical repo LICENSE file so
# a single-file release reproduces it (--help=license). LICENSE stays canonical; this only embeds
# it. The `xff_license` delimiter cannot appear in the license text. (The third-party NOTICE is NOT
# generated here -- it is assembled in code from self-registered components; see license.cc.)
genrule(
    name = "license_text_gen",
    srcs = ["//:LICENSE"],
    outs = ["license_text_generated.cc"],
    cmd = """(
      echo '// Generated from //:LICENSE by //xff/license:license_text_gen. Do not edit.'
      echo '#include "xff/license/license.h"'
      echo 'namespace xff::license {'
      printf 'std::string_view LicenseText() { return R"xff_license('
      cat $(location //:LICENSE)
      printf ')xff_license"; }\\n'
      echo '}  // namespace xff::license'
    ) > $@""",
)

cc_library(
    name = "license_cc",
    srcs = [
        "license.cc",
        "license_text_generated.cc",
    ],
    hdrs = ["license.h"],
    deps = [
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "license_test",
    size = "small",
    srcs = ["license_test.cc"],
    data = [
        "//:LICENSE",
        "//:NOTICE",
    ],
    deps = [
        ":license_cc",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@helly25_mbo//mbo/testing:matchers_cc",
    ],
)
