# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

# Regular-expression matching for find's -regex/-iregex, backed by RE2 (+ EXACT/FNMATCH/GLOB core
# engines, and PCRE2 when the build extra is linked). `backend.h` is the extension seam an extra
# backend implements (third_party/pcre2), so it is an exported header and the target is visible to
# //third_party too - not just //xff.
cc_library(
    name = "regex_cc",
    srcs = ["regex.cc"],
    hdrs = [
        "backend.h",  # the RegexBackend interface + PCRE2 registration API (for extra backends)
        "regex.h",
    ],
    visibility = [
        "//third_party:__subpackages__",
        "//xff:__subpackages__",
    ],
    deps = [
        "//xff/glob:glob_cc",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@re2",
    ],
)

cc_test(
    name = "regex_test",
    size = "small",
    srcs = ["regex_test.cc"],
    deps = [
        ":regex_cc",
        "@abseil-cpp//absl/status",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@helly25_mbo//mbo/testing:status_cc",
    ],
)
