# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

# Output record formatting for matched paths: plain (\n), NUL (\0), JSONL.
cc_library(
    name = "render_cc",
    srcs = ["render.cc"],
    hdrs = ["render.h"],
    visibility = ["//xff:__subpackages__"],
    deps = [
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "render_test",
    size = "small",
    srcs = ["render_test.cc"],
    deps = [
        ":render_cc",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        "@helly25_mbo//mbo/testing:matchers_cc",
    ],
)
