# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

# Git repository discovery: walk up to the working-tree root (the `.git` holder).
# Backs `-g` auto mode and, later, .git/info/exclude and core.excludesFile.
cc_library(
    name = "repo_cc",
    srcs = ["repo.cc"],
    hdrs = ["repo.h"],
    visibility = ["//xff:__subpackages__"],
    deps = [
        "//xff/vfs:vfs_cc",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "repo_test",
    size = "small",
    srcs = ["repo_test.cc"],
    deps = [
        ":repo_cc",
        "//xff/vfs:vfs_cc",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
