# SPDX-FileCopyrightText: Copyright (c) The helly25 authors (helly25.com)
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

# Source-agnostic interface: Entry/Metadata + the FileSystem abstraction.
cc_library(
    name = "vfs_cc",
    hdrs = [
        "entry.h",
        "filesystem.h",
    ],
    visibility = ["//xff:__subpackages__"],
    deps = [
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/time",
    ],
)

# Local filesystem backend (POSIX opendir/readdir + lstat/stat).
cc_library(
    name = "local_fs_cc",
    srcs = ["local_fs.cc"],
    hdrs = ["local_fs.h"],
    visibility = ["//xff:__subpackages__"],
    deps = [
        ":vfs_cc",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/time",
    ],
)

cc_test(
    name = "local_fs_test",
    size = "small",
    srcs = ["local_fs_test.cc"],
    deps = [
        ":local_fs_cc",
        ":vfs_cc",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/time",
        "@com_helly25_mbo//mbo/testing:status_cc",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
